fixed iphone spacing

--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -1714,7 +1714,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
     height: 100%;
   }
   .landing-page .parallax .description{
-    margin-top: 115px;  }
+    margin-top: 100px;  }
   .landing-page .parallax .buttons{
     margin: 20px 0;
   }
